<resources>
    <string name="app_name">EX7client</string>
    <string name="intro">This app demonstrate the call to other Activities in other aplications using the intent object</string>
    <string name="op1">Call</string>
    <string name="op2">Surf</string>
    <string name="op3">Email</string>
    <string name="op4">Register</string>
    <string name="Welcome">
    <item quantity="one">Welcome back %1$s %2$s %3$s</item>
    </string>
</resources>
