<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.peleg.ex7client.MainActivity">

    <TextView
        android:id="@+id/tvIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/linearLayout1"
        android:layout_below="@+id/tvIntro">

        <EditText
            android:id="@+id/input1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:inputType="phone"
            />
        <Button
            android:id="@+id/btcall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op1"
            android:textSize="16dp"
            android:onClick="onClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/linearLayout2">

        <EditText
            android:id="@+id/input2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btsurf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op2"
            android:textSize="16dp"
            android:onClick="onClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/linearLayout3">

        <EditText
            android:id="@+id/input3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:inputType="textEmailAddress" />
        <Button
            android:id="@+id/btemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op3"
            android:textSize="16dp"
            android:onClick="onClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/linearLayout4">

        <EditText
            android:id="@+id/input4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/btregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op4"
            android:textSize="16dp"
            android:onClick="onClick"/>
    </LinearLayout>

</RelativeLayout>
